augur/deploy/augur-openshift.yaml
apiVersion: v1
kind: Service
metadata:
  name: augur
  labels:
    k8s-app: augur
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8900
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: augur
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: augur
  labels:
    k8s-app: augur
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: augur
  template:
    metadata:
      labels:
        k8s-app: augur
    spec:
      hostAliases:
      - ip: "__HAPROXY_IP__"
        hostnames:
        - "augur.openshift.local"
      containers:
      - name: augur
        image: ivyent/augur:1.0.1
        args:
        - --tls=false
        - --tls-listen=0.0.0.0:8900
        - --http-listen=0.0.0.0:8080
        - --store-address=mysql://augur:augur@tcp(augur-mariadb:3306)/augur?charset=utf8mb4&parseTime=True&loc=Local
        - --advertise-url=https://augur.openshift.local:443
        - --log-level=6
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 4000m
            memory: 2Gi
          requests:
            cpu: 1000m
            memory: 2Gi
        ports:
        - containerPort: 8900
          name: https
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: augur-data
          mountPath: /opt/augur/data
      volumes:
      - name: augur-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: augur-mariadb
  labels:
    k8s-app: augur-mariadb
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
  publishNotReadyAddresses: true
  selector:
    k8s-app: augur-mariadb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: augur-mariadb
  labels:
    k8s-app: augur-mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: augur-mariadb
  template:
    metadata:
      labels:
        k8s-app: augur-mariadb
    spec:
      containers:
      - name: mariadb
        image: registry.access.redhat.com/rhscl/mariadb-102-rhel7:latest
        command:
        - bash
        - -c
        - "run-mysqld --max-allowed-packet=1073741824 --max-long-data-size=2147483648 --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci"
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 1000m
            memory: 1Gi
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /usr/lib/mysql
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: augur-mariadb-pvc
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: augur
spec:
  host: augur.openshift.local
  port:
    targetPort: 8080
  to:
    kind: Service
    name: augur
  tls:
    termination: edge
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSlAgEAAoIBAQDjHIuqZlgrCJqB
[...]
      rIED35Igh5SYGo/SjV8l8RU5wg==
      -----END PRIVATE KEY-----
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDbzCCAlegAwIBAgIUTuLwH3jIiEB8hspL6tQ8Hx/aDIowDQYJKoZIhvcNAQEF
[...]
      tSY0mL8W4OqFAn/R6557Ya5zRw==
      -----END CERTIFICATE-----
